# suicide-nigeria

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  _quarto.yml  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
DASHBOARD/: _quarto.yml  app.py  index.html  index.qmd  report.qmd
DASHBOARD/_site/: about.html  index.html  search.json  sitemap.xml  styles.css
DASHBOARD/_site/explore/: merged_suicide-poverty.html  merged_suicide-unemployment.html  who_suicide.html
DASHBOARD/data/: ndp_poverty.csv  ndp_poverty2004_2010.csv  nigerian_suicide_poverty-merged.csv  unemployed.csv
DASHBOARD/explore/: merged_suicide-poverty.ipynb  merged_suicide-unemployment.ipynb  suicide.ipynb  who_suicide.ipynb
conda/: dev.yaml  requirements.txt
dashboard/: _quarto.yml  app.py  index.qmd  report.html  report.qmd
dashboard/_site/: about.html  robots.txt
dashboard/_site/explore/: all_data.html  merged_suicide-unemployment.html  who_suicide.html
dashboard/_site/site_libs/bootstrap/: bootstrap-fbb687782204723c326ea05410f3996e.min.css
dashboard/_site/site_libs/quarto-html/: quarto-syntax-highlighting-dark-8ef56b68f8fa1e9d2ba328e99e439f80.css  quarto-syntax-highlighting-e1a5c8363afafaef2c763b6775fbf3ca.css
dashboard/assets/css/: styles.scss
dashboard/data/: nigerian_suicide_cases.csv
dashboard/explore/: all_data.ipynb  merged_suicide-unemployment.ipynb  who_suicide.ipynb
(+1 files in other folders)
